<resources>
    <string name="app_name">practice_house</string>
    <string name="auth_title">Умный дом</string>
    <string name="auth_email_label">Электронная почта</string>
    <string name="auth_email_hint">usernametest@mail.ru</string>
    <string name="auth_password_label">Пароль</string>
    <string name="auth_password_hint">********</string>
    <string name="auth_login">Войти</string>
    <string name="auth_logout">Выйти</string>
    <string name="auth_register">Регистрация</string>
    <string name="registration_username_label">Имя пользователя</string>
    <string name="registration_username_hint">usernametest</string>
    <string name="pin_title_line1">Создайте</string>
    <string name="pin_title_line2">пин-код</string>

    <string name="main_title">Твой дом</string>
    <string name="main_address">г. Омск, ул. Ленина, д. 24</string>
    <string name="main_tab_rooms">Комнаты</string>
    <string name="main_room_living">Гостиная</string>
    <string name="main_room_kitchen">Кухня</string>
    <string name="main_room_bathroom">Ванная</string>
    <string name="main_add_room">Добавить комнату</string>
    <string name="main_settings">Настройки</string>

    <string name="add_room_title">Добавить комнату</string>
    <string name="add_room_name_hint">Название комнаты</string>
    <string name="add_room_select_type">Выбрать комнату</string>
    <string name="add_room_save">Сохранить</string>
    <string name="add_room_back">Назад</string>
    <string name="add_room_type_living">Гостиная</string>
    <string name="add_room_type_kitchen">Кухня</string>
    <string name="add_room_type_bathroom">Ванная</string>
    <string name="add_room_type_office">Кабинет</string>
    <string name="add_room_type_bedroom">Спальня</string>
    <string name="add_room_type_hall">Зал</string>
</resources>