<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity">

    <ImageView
        android:id="@+id/auth_background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_auth_background" />

    <View
        android:id="@+id/auth_gradient_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_auth_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/auth_logo"
        android:layout_width="@dimen/auth_logo_width"
        android:layout_height="@dimen/auth_logo_height"
        android:contentDescription="@null"
        android:importantForAccessibility="no"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/auth_header_margin_top"
        app:srcCompat="@drawable/img_auth_logo" />

    <TextView
        android:id="@+id/auth_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/auth_title_margin_top"
        android:text="@string/auth_title"
        android:textColor="@color/white"
        android:textSize="@dimen/auth_title_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_logo" />

    <LinearLayout
        android:id="@+id/auth_form_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/auth_card_horizontal_margin"
        android:layout_marginTop="@dimen/auth_card_margin_top"
        android:layout_marginEnd="@dimen/auth_card_horizontal_margin"
        android:background="@drawable/bg_auth_card"
        android:orientation="vertical"
        android:paddingStart="@dimen/auth_card_padding_horizontal"
        android:paddingTop="@dimen/auth_card_padding_vertical"
        android:paddingEnd="@dimen/auth_card_padding_horizontal"
        android:paddingBottom="@dimen/auth_card_padding_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_title">

        <TextView
            android:id="@+id/auth_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_email_label"
            android:textColor="@color/auth_label"
            android:textSize="@dimen/auth_label_text_size" />

        <EditText
            android:id="@+id/auth_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_auth_input_underline"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:minHeight="40dp"
            android:paddingBottom="8dp"
            android:text="@string/auth_email_hint"
            android:textColor="@color/auth_input_text"
            android:textSize="@dimen/auth_input_text_size"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/auth_password_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/auth_field_spacing"
            android:text="@string/auth_password_label"
            android:textColor="@color/auth_label"
            android:textSize="@dimen/auth_label_text_size" />

        <EditText
            android:id="@+id/auth_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/bg_auth_input_underline"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:minHeight="40dp"
            android:paddingBottom="8dp"
            android:text="@string/auth_password_hint"
            android:textColor="@color/auth_input_text"
            android:textSize="@dimen/auth_input_text_size"
            android:textStyle="bold"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/auth_login_button"
        style="@style/Widget.Auth.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_button_height"
        android:layout_marginStart="@dimen/auth_button_horizontal_margin"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/auth_button_horizontal_margin"
        android:layout_marginBottom="@dimen/auth_button_spacing"
        android:text="@string/auth_login"
        app:layout_constraintBottom_toTopOf="@id/auth_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/auth_form_card"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/auth_register_button"
        style="@style/Widget.Auth.Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="@dimen/auth_button_height"
        android:layout_marginStart="@dimen/auth_button_horizontal_margin"
        android:layout_marginEnd="@dimen/auth_button_horizontal_margin"
        android:layout_marginBottom="@dimen/auth_buttons_margin_bottom"
        android:text="@string/auth_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
