<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_room_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_body_background"
    android:orientation="vertical"
    tools:context=".AddRoomActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/add_room_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_header_background"
        android:paddingStart="@dimen/add_room_header_padding_horizontal"
        android:paddingTop="@dimen/add_room_header_padding_top"
        android:paddingEnd="@dimen/add_room_header_padding_horizontal"
        android:paddingBottom="@dimen/add_room_header_padding_bottom">

        <FrameLayout
            android:id="@+id/add_room_back_button"
            android:layout_width="@dimen/add_room_back_button_size"
            android:layout_height="@dimen/add_room_back_button_size"
            android:background="@drawable/bg_main_circle_button"
            android:contentDescription="@string/add_room_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="@dimen/add_room_back_icon_size"
                android:layout_height="@dimen/add_room_back_icon_size"
                android:layout_gravity="center"
                android:contentDescription="@null"
                android:importantForAccessibility="no"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_add_room_back" />

        </FrameLayout>

        <TextView
            android:id="@+id/add_room_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_room_title"
            android:textColor="@color/white"
            android:textSize="@dimen/add_room_title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/main_body_background"
        android:clipToPadding="false"
        android:fillViewport="true"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/add_room_content_padding_horizontal"
            android:paddingTop="@dimen/add_room_content_padding_top"
            android:paddingEnd="@dimen/add_room_content_padding_horizontal"
            android:paddingBottom="@dimen/add_room_content_padding_bottom"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/add_room_name_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_room_input_height"
                android:background="@drawable/bg_add_room_input"
                android:hint="@string/add_room_name_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:paddingStart="@dimen/add_room_input_padding_horizontal"
                android:paddingEnd="@dimen/add_room_input_padding_horizontal"
                android:textColor="@color/add_room_input_text"
                android:textColorHint="@color/add_room_input_hint"
                android:textSize="@dimen/add_room_input_text_size" />

            <TextView
                android:id="@+id/add_room_section_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_room_section_margin_top"
                android:text="@string/add_room_select_type"
                android:textColor="@color/add_room_section_label"
                android:textSize="@dimen/add_room_section_text_size"
                android:textStyle="bold" />

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/add_room_type_grid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/add_room_grid_margin_top"
                app:alignmentMode="alignBounds"
                app:columnCount="3"
                app:useDefaultMargins="false" />

            <Button
                android:id="@+id/add_room_save_button"
                style="@style/Widget.AddRoom.Button.Save"
                android:layout_width="200dp"
                android:layout_height="@dimen/add_room_save_button_height"
                android:layout_marginTop="@dimen/add_room_save_button_margin_top"
                android:layout_marginBottom="@dimen/add_room_save_button_margin_bottom"
                android:text="@string/add_room_save" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>
