<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_body_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/main_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/main_header_background"
            android:paddingTop="@dimen/main_header_padding_top"
            android:paddingEnd="@dimen/main_header_padding_horizontal">

            <TextView
                android:id="@+id/main_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_title_top_spacing"
                android:layout_marginEnd="@dimen/main_title_settings_spacing"
                android:text="@string/main_title"
                android:textColor="@color/white"
                android:textSize="@dimen/main_title_text_size"
                android:textStyle="bold"
                android:paddingStart="@dimen/main_header_padding_horizontal"
                app:layout_constraintEnd_toStartOf="@id/main_settings_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/main_settings_button"
                android:layout_width="@dimen/main_settings_button_size"
                android:layout_height="@dimen/main_settings_button_size"
                android:background="@drawable/bg_main_circle_button"
                android:contentDescription="@string/main_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="@dimen/main_settings_icon_size"
                    android:layout_height="@dimen/main_settings_icon_size"
                    android:layout_gravity="center"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_settings" />

            </FrameLayout>

            <LinearLayout
                android:id="@+id/main_address_row"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_address_margin_top"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/main_header_padding_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_title">

                <ImageView
                    android:layout_width="@dimen/main_location_icon_size"
                    android:layout_height="@dimen/main_location_icon_size"
                    android:contentDescription="@null"
                    android:importantForAccessibility="no"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_main_location" />

                <TextView
                    android:id="@+id/main_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/main_address"
                    android:textColor="@color/main_address_text"
                    android:textSize="@dimen/main_address_text_size" />

            </LinearLayout>

            <TextView
                android:id="@+id/main_tab_rooms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_tab_margin_top"
                android:text="@string/main_tab_rooms"
                android:textColor="@color/white"
                android:textSize="@dimen/main_tab_text_size"
                android:textStyle="bold"
                android:paddingStart="@dimen/main_header_padding_horizontal"
                android:paddingEnd="@dimen/main_header_padding_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_address_row"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:id="@+id/main_tab_indicator"
                android:layout_width="0dp"
                android:layout_height="@dimen/main_tab_indicator_height"
                android:layout_marginTop="@dimen/main_tab_indicator_margin_top"
                android:background="@drawable/bg_main_tab_indicator"
                app:layout_constraintEnd_toEndOf="@id/main_tab_rooms"
                app:layout_constraintStart_toStartOf="@id/main_tab_rooms"
                app:layout_constraintTop_toBottomOf="@id/main_tab_rooms" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/main_room_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/main_body_background"
            android:clipToPadding="false"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:id="@+id/main_room_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/main_room_list_padding_horizontal"
                android:paddingTop="@dimen/main_room_list_padding_top"
                android:paddingEnd="@dimen/main_room_list_padding_horizontal"
                android:paddingBottom="@dimen/main_room_list_padding_bottom" />

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/main_add_room_fab"
        android:layout_width="@dimen/main_fab_size"
        android:layout_height="@dimen/main_fab_size"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/main_fab_margin"
        android:layout_marginBottom="@dimen/main_fab_margin"
        android:background="@drawable/bg_main_circle_button"
        android:clickable="true"
        android:contentDescription="@string/main_add_room"
        android:focusable="true">

        <ImageView
            android:layout_width="@dimen/main_fab_icon_size"
            android:layout_height="@dimen/main_fab_icon_size"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:importantForAccessibility="no"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_main_plus" />

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
